Started integrating the GUI with the SCPI
- Connect() and Disconnect() are working
- Deleted backup (BU) files

--- a/PLC/Instrument Control/Instrument Control GUI.kv
+++ b/PLC/Instrument Control/Instrument Control GUI.kv
@@ -20,6 +20,7 @@
     MDTextField:
         id: ip_input
         hint_text: "Enter IP address (xx.x.x.xx)"
+        text: app.ip_address
         size_hint_x: 0.5
         pos_hint: {"center_x": 0.5, "center_y": 0}
     MDLabel:
