--- a/PLC/Instrument Control/Instrument Control GUI.kv
+++ b/PLC/Instrument Control/Instrument Control GUI.kv
@@ -1,7 +1,7 @@
 #####   Popup dialogs   #####
 
 <IPDialogContent>:
-    orientation: 'vertical'
+    orientation: "vertical"
     MDTextField:
         id: ip_input
         hint_text: "Enter IP address (xx.xx.xx.xx)" if app.enable_hint_text else ""
@@ -15,7 +15,7 @@
         halign: "center"
 
 <MismatchDialogContent>:
-    orientation: 'vertical'
+    orientation: "vertical"
     size_hint_y: None
     height: 200
 
@@ -32,10 +32,10 @@
 
 <ScrollView>:
     control_text_width: 200
-    element_height_1: '40dp'
-    element_height_2: '80dp'
-    element_height_rbw: '60dp'
-    element_spacing: 10
+    element_height_1: "40dp"
+    element_height_2: "80dp"
+    element_height_rbw: "60dp"
+    element_spacing: 5      # 10 is OK, but bigger than that and the Sliders stop working
 
 <MDRaisedButton>:
     font_size: sp(16)  # Apply to all MDRaisedButtons
@@ -58,28 +58,30 @@ ScrollView:
     #####   Main window to fit vertically: Spectrum screen, labels, and buttons   #####
 
     BoxLayout:
-        orientation: 'vertical'
+        orientation: "vertical"
         size_hint_x: 1
-        size_hint_y: 2 if app.is_scrollable else 1
-        # height: self.minimum_height  # Adjust height to content
+        size_hint_y: None if app.is_scrollable else 1
+        height: "1250dp" if app.is_scrollable else 1
 
         # Top window to fit the connection label, and Spectrum screen
         BoxLayout:
-            orientation: 'vertical' if app.is_scrollable else 'horizontal'
-            size_hint_y: 0.2 if app.is_scrollable else 0.5
+            orientation: "vertical" if app.is_scrollable else "horizontal"
+            size_hint_y: 0.6 if app.is_scrollable else 0.65
+            padding: "10dp"
 
             # Connection label
             MDCard:
                 id: connection_card
                 size_hint: None, None
                 size: "200dp", "50dp"
-                pos_hint: {"center_x": 0.1, "center_y": 0.9}
+                pos_hint: {"center_y": 0.9}
+                x: 0
                 elevation: 4  # Shadow depth
                 radius: [5, ]  # Rounded corners if needed
-                padding: '10dp'
+                padding: "10dp"
                 md_bg_color: app.color_red
                 opacity: 1
-                orientation: 'vertical'
+                orientation: "vertical"
 
                 MDLabel:
                     id: connection_label
@@ -91,13 +93,13 @@ ScrollView:
             # Spectrum screen
             Image:
                 size_hint_x: 1
-                padding: '10dp'
-                source: 'Temp pic.png'
+                padding: "10dp"
+                source: "Temp pic.png"
 
         # Two columns of labels
         BoxLayout:
-            orientation: 'vertical' if app.is_scrollable else 'horizontal'
-            size_hint_y: 0.8 if app.is_scrollable else 0.5
+            orientation: "vertical" if app.is_scrollable else "horizontal"
+            size_hint_y: 0.75 if app.is_scrollable else 0.6
             padding: 10
 
 
@@ -105,13 +107,13 @@ ScrollView:
     #####   Left Side labels   #####
 
             BoxLayout:
-                orientation: 'vertical'
+                orientation: "vertical"
                 size_hint_x: 1 if app.is_scrollable else 0.5
                 spacing: root.element_spacing
 
                 # Start Frequency
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_2
                     spacing: root.element_spacing
@@ -122,7 +124,7 @@ ScrollView:
                         width: root.control_text_width
 
                     BoxLayout:
-                        orientation: 'vertical'
+                        orientation: "vertical"
                         size_hint_y: None
                         height: root.element_height_2
                         spacing: root.element_spacing
@@ -131,7 +133,7 @@ ScrollView:
                             id: start_input
                             hint_text: "Enter start frequency" if app.enable_hint_text else ""
                             text: str(app.start_frequency)
-                            input_filter: 'float'
+                            input_filter: "float"
                             on_focus: if not self.focus: app.set_start_frequency(self.text)
 
 
@@ -145,7 +147,7 @@ ScrollView:
 
                 # Stop Frequency
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_2
                     spacing: root.element_spacing
@@ -156,7 +158,7 @@ ScrollView:
                         width: root.control_text_width
 
                     BoxLayout:
-                        orientation: 'vertical'
+                        orientation: "vertical"
                         size_hint_y: None
                         height: root.element_height_2
                         spacing: root.element_spacing
@@ -165,7 +167,7 @@ ScrollView:
                             id: stop_input
                             hint_text: "Enter stop frequency" if app.enable_hint_text else ""
                             text: str(app.stop_frequency)
-                            input_filter: 'float'
+                            input_filter: "float"
                             on_focus: if not self.focus: app.set_stop_frequency(self.text)
 
                         MDSlider:
@@ -178,7 +180,7 @@ ScrollView:
 
                 # RBW
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_rbw
                     spacing: root.element_spacing
@@ -192,12 +194,12 @@ ScrollView:
                         id: rbw
                         text: str(app.rbw)
                         hint_text: "Enter 0 to set to AUTO" if app.enable_hint_text else ""
-                        input_filter: 'float'
+                        input_filter: "float"
                         on_focus: if not self.focus: app.check_if_bw_is_0(self.text, "rbw")
 
                 # VBW
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_1
                     spacing: root.element_spacing
@@ -211,12 +213,12 @@ ScrollView:
                         id: vbw
                         text: str(app.vbw)
                         hint_text: "Enter 0 to set to AUTO" if app.enable_hint_text else ""
-                        input_filter: 'float'
+                        input_filter: "float"
                         on_focus: if not self.focus: app.check_if_bw_is_0(self.text, "vbw")
 
                 # Dropdown - Test type (frequency selector)
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_1
 
@@ -235,14 +237,14 @@ ScrollView:
     #####   Right Side labels   #####
 
             BoxLayout:
-                orientation: 'vertical'
+                orientation: "vertical"
                 size_hint_x: 1 if app.is_scrollable else 0.5
                 padding: 10
                 spacing: root.element_spacing
 
                 # Dropdown - Traces (Avg and MH)
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_1
                     spacing: root.element_spacing
@@ -259,7 +261,7 @@ ScrollView:
 
                 # Impedance
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_1
                     spacing: root.element_spacing
@@ -273,11 +275,11 @@ ScrollView:
                         id: impedance
                         text: str(app.impedance)
                         hint_text: "Enter 50 or 75" if app.enable_hint_text else ""
-                        input_filter: 'int'
+                        input_filter: "int"
 
                 # Dropdown - Coupling (AC and DC)
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_1
 
@@ -293,7 +295,7 @@ ScrollView:
 
                 # Dropdown - Average Type (Log and RMS)
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_1
 
@@ -309,7 +311,7 @@ ScrollView:
 
                 # Attenuation
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_1
                     spacing: root.element_spacing
@@ -323,11 +325,11 @@ ScrollView:
                         id: attenuation
                         text: str(app.attenuation)
                         hint_text: "Default is 10" if app.enable_hint_text else ""
-                        input_filter: 'float'
+                        input_filter: "float"
 
                 # Reference Level
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_1
                     spacing: root.element_spacing
@@ -341,11 +343,11 @@ ScrollView:
                         id: reference_level
                         text: str(app.reference_level)
                         hint_text: "Default = 0dBm. 100Ω = 10dBm. 500Ω = 20dBm" if app.enable_hint_text else ""
-                        input_filter: 'float'
+                        input_filter: "float"
 
                 # Y Reference Level
                 BoxLayout:
-                    orientation: 'horizontal'
+                    orientation: "horizontal"
                     size_hint_y: None
                     height: root.element_height_1
                     spacing: root.element_spacing
@@ -359,18 +361,17 @@ ScrollView:
                         id: y_reference_level
                         text: str(app.y_reference_level)
                         hint_text: "Default = 0; affects only the Y-axis" if app.enable_hint_text else ""
-                        input_filter: 'float'
+                        input_filter: "float"
 
         # Buttons centered at the bottom
         BoxLayout:
-            orientation: 'horizontal'
+            orientation: "horizontal"
             size_hint_y: None
             size_hint_x: 1
-            height: '50dp'
+            height: "50dp"
             spacing: 10 if app.is_scrollable else 50
             padding: 10
-            # Center the buttons
-            pos_hint: {"center_x": 0.5, "center_y": 0}  # Center horizontally at the bottom
+            pos_hint: {"center_x": 0.5, "center_y": 0}
 
             MDRaisedButton:
                 id: connection_button
@@ -391,9 +392,9 @@ ScrollView:
             MDRaisedButton:
                 text: "Run"
                 size_hint_x: 0.2
-                on_release: app.run_traces()
+                on_release: app.traces_run()
 
             MDRaisedButton:
                 text: "Stop"
                 size_hint_x: 0.2
-                on_release: app.stop_traces()
+                on_release: app.traces_stop()
