--- a/PLC/Instrument Control/Instrument Control GUI.kv
+++ b/PLC/Instrument Control/Instrument Control GUI.kv
@@ -92,9 +92,10 @@ ScrollView:
 
             # Spectrum screen
             Image:
+                id: spectrum_image
                 size_hint_x: 1
                 padding: "10dp"
-                source: "Temp pic.png"
+                source: "Icon.png"
 
         # Two columns of labels
         BoxLayout:
